--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>Learn About Me</title>
+<title>Blog</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
 </head>
