--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,52 +1,35 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-
-<meta charset="utf-8">
-<title>Blog</title>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
-</head>
-
-<body>
-
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-
-  <div class="container">
-
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Learn About Me</a>
-    </div>
-
-    <ul class="nav navbar-nav navbar-right">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <title>Blog</title>
+  </head>
+  <body>
+    <div class="admin panel">
       <% if (currentUser) { %>
-        <li>
-          <a href="/edit">
-            Hello, <%= currentUser.username %>
-          </a>
-        </li>
-        <li><a href="/logout">Log out</a></li>
+        Hello, <%= currentUser.username %>
+        <a href="/posts/new">New Post</a>
+        <a href="/logout">Log out</a>
       <% } else { %>
-        <li><a href="/login">Log in</a></li>
-        <li><a href="/signup">Sign up</a></li>
+        <a href="/login">Log in</a>
       <% } %>
-    </ul>
+    </div>
 
-  </div>
+    <div class="centered text-large">
+      Welcome to Lachlan's Blog
+    </div>
 
-</div>
+    <div class="centered text-medium">
+      <a href="/posts">Posts</a>
+      <a href="/about">About</a>
+      <a href="/resume">Resume</a>
+    </div>
 
-<div class="container">
-
-  <% errors.forEach(function(error) { %>
-    <div class="alert alert-danger" role="alert">
+    <% errors.forEach(function(error) { %>
       <%= error %>
-    </div>
-  <% }) %>
+    <% }) %>
 
-  <% infos.forEach(function(info) { %>
-    <div class="alert alert-info" role="alert">
+    <% infos.forEach(function(info) { %>
       <%= info %>
-    </div>
-  <% }) %>
+    <% }) %>
