--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -5,7 +5,7 @@
     <a class="inlined text-large" href="<%='posts/' + post.id %>">
       <%= post.title %>
     </a> 
-    <div class="inlined text-medium"> 
+    <div class="right-floated inlined padded text-medium"> 
       <%= moment(post.createdAt).format('MMM YYYY') %> 
     </div>
     <div class="text-medium">
