--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,12 +1,15 @@
 <% include ../_header %>
 
-<%= post.id + ' ' + post.title %>
-<form action="/posts/update" method="post">
-  <input type="text" name="title" value="<%= post.title %>" required>
-  <input type="text" name="body" value="<%= post.body %>" required>
-  <input type="hidden" name="id" value="<%= post.id %>">
-  <input type="submit" value="Update Post">
-</form>
+<div class="container centered">
+  <form action="/posts/update" method="post">
+    <input type="text" class="centered text-large full-width" name="title" value="<%= post.title %>" required><br />
+    <textarea type="text" rows="20" class="centered full-width justified text-medium" 
+     name="body" required><%= post.body %>
+    </textarea><br />
+    <input type="hidden" name="id" value="<%= post.id %>">
+    <input type="submit" class="right-floated" value="Update Post">
+  </form>
+</div>
 
 <% include ../_footer %>
 
