--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,12 +1,13 @@
 <% include ../_header %>
 
-<h3>Create New Post</h3>
-
-<form action="/posts/create" method="post">
-  <input type="text" name="title" placeholder="Post title" required>
-  <textarea type="text" name="body" placeholder="Post body" required></textarea>
-  <input type="submit" value="Create Post">
-<form>
+<div class="container centered">
+  <h3>Create New Post</h3>
+  <form action="/posts/create" method="post">
+    <input class="centered text-large full-width" type="text" name="title" placeholder="Post title" required><br />
+    <textarea class="centered full-width justified text-medium" type="text" name="body" placeholder="Post body" required></textarea><br />
+    <input type="submit" class="right-floated" value="Create Post">
+  <form>
+</div>
 
 <% include ../_footer %>
 
