--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+/*  font-family: 'Avenir', Helvetica, Arial, sans-serif; */
+   font-family: "Courier New", monospace; 
 }
 
 .admin.panel {
