--- a/public/style.css
+++ b/public/style.css
@@ -1,55 +1,39 @@
 body {
-   font-family: "Courier New", monospace; 
+  font-size: 100%;
+  font-family: "Courier New", monospace; 
+  line-height: 1.6875;
 }
 
+@media only screen and (max-width: 400px) {
+  body { font-size:90%; }
+}
+
+@media only screen and (max-width: 800px) {
+  body { font-size:100%; }
+} 
+
+@media only screen and (max-width: 1100px) {
+  body { font-size:120%; }
+}
+
+@media only screen and (min-width: 1100px) {
+  body { font-size:120%; }
+  .wrap {max-width:770px;}
+}
+
+h1, h2, h3, h4, h5 {
+  text-align: center;
+}
 .admin.panel {
   text-align: right;
 }
 
-.centered {
-  text-align: center;
-}
-
-.full-width {
-  width: 100%;
-}
 .container {
   margin-left: 10%;
   width: 80%;
-}
-
-.text-large {
-  font-size: 3em;
-}
-
-.text-medium {
-  font-size: 1.5em;
-}
-
-.inlined {
-  display: inline-block;
-}
-
-.blocked {
-  display: block;
-}
-
-.padded {
-  padding: 0.25em 0.25em 0.25em 0.25em
-}
-
-.centered {
-  text-align: center;
-  margin-bottom: 0.5em;
-}
-
-.right-floated {
-  float: right;
 }
 
 .justified {
   white-space: pre-wrap; 
   text-align: justify;
 }
-
-
