--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,16 @@
 <% include _header %>
 
-<h3>About coming soon.</h3>
+<div class="container">
+  </div>
+    <h3>About coming soon.</h3>
+  </div>
 
+<div style="color: white">
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+</div>
 <% include _footer %>
 
