--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -1,5 +1,14 @@
 <% include _header %>
+<div class="container">
+  <h3>Resume coming soon.</h3>
+</div>
 
-<h3>Resume coming soon.</h3>
+<div style="color: white">
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+  PLACEHOLDER PLACEHOLDER PLACEHOLDER PLACEHOLDER 
+</div>
 
 <% include _footer %>
