--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -7,7 +7,7 @@
   <div class="justified"><%= content %>
   </div>
   <% if (currentUser) { %>
-  <a class="right-floated" href='/posts/edit/<%= post.id %>'>Edit</a>
+  <a class="right-floated" href='/posts/edit/<%= id %>'>Edit</a>
   <% } %>
 </div>
 
