--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,2 +1,19 @@
+
+<div class="admin panel">
+  <% if (currentUser) { %>
+  Hello, <%= currentUser.username %>
+  <a href="/posts/new">New Post</a>
+  <a href="/logout">Log out</a>
+  <% } else { %>
+  <a href="/login">Log in</a>
+  <% } %>
+</div>
+
+</div>
+
+<div class="two wide column">
+  <!-- placeholder -->
+</div>
+</div>
 </body>
 </html>
