--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@ body {
 */
 h1, h2, h3, h4, h5 {
   text-align: center;
+  font-family: "Courier New", monospace !important;
 }
 .admin.panel {
   text-align: right;
