Style for mobile

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,5 +1,5 @@
-
-<div class="admin panel">
+</div>
+<div class="right-floated">
   <% if (currentUser) { %>
   Hello, <%= currentUser.username %>
   <a href="/posts/new">New Post</a>
