--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,10 @@
-body {
-  font-size: 150%; !important;
+.container {
+  font-size: 150%; 
   font-family: "Courier New", monospace !important;
   line-height: 1.6875;
 }
-/*
-@media only screen and (max-width: 400px) {
+
+/*@media only screen and (max-width: 400px) {
   body { font-size:120%; }
 }
 
@@ -17,15 +17,12 @@ body {
 }
 
 @media only screen and (min-width: 1100px) {
-  body { font-size:200%; }
-}
-*/
+  body { font-size: 5em%; }
+}*/
+
 h1, h2, h3, h4, h5 {
   text-align: center;
   font-family: "Courier New", monospace !important;
-}
-.admin.panel {
-  text-align: right;
 }
 
 .justified {
@@ -37,12 +34,8 @@ h1, h2, h3, h4, h5 {
   margin-bottom: 1em;
 }
 
-.text-large {
-  font-size: 3em;
-}
-
-.text-medium {
-  font-size: 2em;
+.right-floated {
+  float: right;
 }
 
 .full-width {
