--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,15 +1,14 @@
 <% include ../_header %>
 
-<div class="container centered">
+<h3>Edit Post</h3>
   <form action="/posts/update" method="post">
-    <input type="text" class="bottom-padded text-large full-width" name="title" value="<%= post.title %>" required><br />
-    <textarea type="text" rows="20" class="bottom-padded full-width justified text-medium" 
+    <input type="text" class="full-width" name="title" value="<%= post.title %>" required><br />
+    <textarea type="text" rows="20" class="full-width justified" 
      name="body" required><%= post.body %>
     </textarea><br />
     <input type="hidden" name="id" value="<%= post.id %>">
     <input type="submit" class="right-floated" value="Update Post">
   </form>
-</div>
 
 <% include ../_footer %>
 
