Add projects link and tetris project

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/tetris.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" >
@@ -24,6 +25,7 @@
 
         <h4>
           <a href="/posts">Posts</a> | 
+          <a href="/projects">Projects</a> | 
           <a href="/about">About</a> | 
           <a href="/resume">Resume</a>
         </h4>
@@ -36,4 +38,4 @@
         <%= info %>
         <% }) %>
 
-        <div class="container">
+        <!--<div class="container">-->
