--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,14 +1,15 @@
 <% include ../_header %>
 
-<h3>Edit Post</h3>
+<div class="container">
+  <h3>Edit Post</h3>
   <form action="/posts/update" method="post">
     <input type="text" class="full-width" name="title" value="<%= post.title %>" required><br />
     <textarea type="text" rows="20" class="full-width justified" 
-     name="body" required><%= post.body %>
+                                    name="body" required><%= post.body %>
     </textarea><br />
     <input type="hidden" name="id" value="<%= post.id %>">
     <input type="submit" class="right-floated" value="Update Post">
   </form>
-
+</div>
 <% include ../_footer %>
 
