--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -1,3 +1,14 @@
 <% include _header %>
 <h3>Resume coming soon.</h3>
+<div class="container">
+  <p>
+    Email: 
+    <a href="mailto:lachlan.miller.1990@outlook.com">lachlan dot miller dot 1990 at outlook dot com</a>
+  </p>
+  <p>
+  Github: 
+    <a href="https://github.com/lmiller1990"> https://github.com/lmiller1990
+    </a>  
+  </p>
+</div>
 <% include _footer %>
