--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,11 +1,12 @@
 <% include ../_header %>
 
+<div class="container">
   <h3>Create New Post</h3>
   <form action="/posts/create" method="post">
     <input class="full-width" type="text" name="title" placeholder="Post title" required><br />
     <textarea class="full-width justified" rows="20" type="text" name="body" placeholder="Post body" required></textarea><br />
     <input type="submit" class="right-floated" value="Create Post">
   <form>
-
+</div>
 <% include ../_footer %>
 
