--- a/views/posts/all.ejs
+++ b/views/posts/all.ejs
@@ -1,5 +1,11 @@
 <% include ../_header %>
   <div class="container">
-    <h3>All Posts</h3>
+    <h2>All Posts</h2>
+    <% posts.forEach((post) => { %>
+      <h3>
+        <%= post.title %>
+      </h3>
+      <div class="justified"><%= post.body %></div>
+    <% }) %>
   </div>
 <% include ../_footer %>
