--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,9 +5,10 @@
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link rel="stylesheet" type="text/css" href="/tetris.css" />
+ <meta name="viewport" content="width=device-width, maximum-scale=1, user    -scalable=no" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1" >-->
     <title>Blog</title>
   </head>
   <body>
