Use full html layout

--- a/views/tsukiatte.ejs
+++ b/views/tsukiatte.ejs
@@ -1,3 +1,14 @@
-<div id="app"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, maximum-scale=1, user        -scalable=no" />
 
-<script type="text/javascript" src="/date.js"></script>
+  <title></title>
+</head>
+<body>
+  <div id="app"></div>
+
+  <script type="text/javascript" src="/date.js"></script>
+</body>
+</html>
