--- a/views/tsukiatte.ejs
+++ b/views/tsukiatte.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, maximum-scale=1, user        -scalable=no" />
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 
   <title></title>
 </head>
