--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,11 @@
 <% include _header %>
 
-<h3>About coming soon.</h3>
+<div class="container">
+  <p>Hi. I'm Lachlan. I am a software developer at HTM (htm.co.jp), where I work on internal accounting and payroll systems.</p>
+  <p>
+  In my free time, I explore other areas of web development, especially Javascript (Node and Vue/React). You can view my projects at <a href="https://github.com/lmiller1990">https://github.com/lmiller1990</a>. I am always open to working on new projects or trying new technologies!</p>
+  <p>Get in touch at lachlan.miller.1990@outlook.com</p>
+</div>
 
 <% include _footer %>
 
