--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -3,7 +3,7 @@
 <div class="container">
   <p>
     Email: 
-    <a href="mailto:lachlan.miller.1990@outlook.com">lachlan dot miller dot 1990 at outlook dot com</a>
+    <a href="mailto:lachlan.miller.1990@outlook.com">lachlan.miller.1990@outlook.com</a>
   </p>
   <p>
   Github: 
